# comp520-a2

./: .gitignore  README  assign2.cabal  build.sh  run.sh
.stack-work/intero/: intero11064NIs.hs  intero11064ZmH.hs  intero11495O5v.hs  intero12760tYK.hs  intero15439ebe.hs  intero158305VM.hs  intero15830CNg.hs  intero15830GgS.hs  intero15830sLG.hs  intero16734HLK.hs  intero18427Ys.hs  intero1842HwT.hs  intero1842hEg.hs  intero21733fLs.hs  intero21733xVn.hs  intero21803qkK.hs  intero22069Hqz.hs  intero22279JjO.hs  intero22279WtU.hs  intero22279pj6.hs  intero262612-J.hs  intero272634YO.hs  intero272634fC.hs  intero272635Lt.hs  intero27263FqI.hs  intero27263GWz.hs  intero27263IEA.hs  intero27263S0O.hs  intero27263f3g.hs  intero27263sIb.hs  intero27380P41.hs  intero30150EeL.hs  intero30750HZs.hs  intero30750Hgg.hs  intero30750T3H.hs  intero30750Uqm.hs  intero30750u-y.hs  intero4248ZNK.hs  intero4248sCY.hs  intero5452mNP.hs  (+9 more)
.stack-work/intero/intero11064aSy/: AST.hi  Backend.hi  Main.hi  Parser.hi  Scanner.hi  SymbolTable.hi  Token.hi
.stack-work/intero/intero11064z6T/: AST.hi  Backend.hi  Main.hi  Parser.hi  Scanner.hi  SymbolTable.hi  Token.hi
.stack-work/intero/intero11495Bvp/: AST.hi
.stack-work/intero/intero12760zDS/: AST.hi  Parser.hi  SymbolTable.hi  Token.hi
.stack-work/intero/intero15439EHS/: AST.hi  Main.hi  Parser.hi  SymbolTable.hi  Token.hi
app/: Main.hs
programs/invalidtype/: test1.min  test2.min  test3.min  test4.min  test5.min
src/: Parser.y  Scanner.x  assign2.cabal  stack.yaml
src/app/: Main.hs
src/src/: AST.hs  Backend.hs  SymbolTable.hs
(+207 files in other folders)
