name:                assign2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            
license:             BSD3
author:              Yi Qiao Wang
maintainer:          yiqiao.wang96@gmail.com
copyright:           2017 Yi Qiao Wang
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scanner, Token, Parser, AST, SymbolTable, 
                       Backend
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       array
  build-tools:         alex, happy
  default-language:    Haskell2010

executable assign2-exe
  hs-source-dirs:      app
  main-is:             Main.hs 
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , assign2
  default-language:    Haskell2010
